manifests/dev/harbor/NetworkPolicy-harbor-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.4.2
    helm.sh/chart: redis-20.11.5
  name: harbor-redis
  namespace: harbor
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 6379
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
